--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,22 @@
 #       enabled: "ON"
 
 en:
-  hello: "Hello world"
+  filters:
+    hints:
+      podcast: "Include/exclude data for specific podcasts (e.g., Include only data for Podcast A and Podcast B)"
+      episode: "Include/exclude data for specific episodes"
+      time: "Include/exclude data for downloads in a specific time range"
+      published: "Include/exclude data for episodes published during a specific time range"
+      age: "Include/exclude data for episodes based on the current age of the episode (e.g., Exclude data for episodes published in the last 7 days)"
+      lag: "Include/exclude data for episodes based on the age of the episode when the data was generated (e.g., Include data only when the download/impression/etc occurred within 48 hours of the episode being released, regardless of how long ago it was released)"
+      ua: "Include/exclude data for specific user agents (e.g., Include data only for Apple Podcasts and Spotify)"
+      device: "Include/exclude data for specific device types (e.g., Exclude data for mobile apps)"
+      os: "Include/exclude data for specific operating systems (e.g., Include data only for Android)"
+      continent: "Include/exclude data for specific continents (e.g., Exclude data from North America)"
+      country: "Include/exclude data for specific countries (e.g., Include data only from Spain and Portugal)"
+      subdiv: "Include/exclude data for specific regions (states, provinces, etc)"
+      city: "Include/exclude data for specific cities"
+      metro: "Include/exclude data for specific DMA metro regions"
+      tz: "Include/exclude data for specific time zones (e.g., Include data only from Eastern time zone in the US)"
+      campaign: "Include/exclude data for activity related to a specific campaign (e.g., Include download/impression/etc data only for downloads that included ads for certain campaigns)"
+      advertiser: "Include/exclude data for activity related to a specific advertiser (e.g., Include download/impression/etc data only for downloads that included ads from certain advertisers"
