--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,8 +32,9 @@ en:
     hints:
       podcast: "Include/exclude data for specific podcasts (e.g., Include only data for Podcast A and Podcast B)"
       episode: "Include/exclude data for specific episodes"
-      time: "Include/exclude data for downloads in a specific time range"
-      published: "Include/exclude data for episodes published during a specific time range"
+      time: "Include/exclude data for downloads in a specific time range. All dates and times in UTC"
+      localTime: "Include/exclude data for downloads in a specific time range, with times converted from UTC to their wall clock time (e.g., 9 AM ET and 9 AM PT become the same time). Note that this does distort reality, but can be useful for certain types of analysis."
+      published: "Include/exclude data for episodes published during a specific time range. All dates and times in UTC"
       age: "Include/exclude data for episodes based on the current age of the episode (e.g., Exclude data for episodes published in the last 7 days)"
       lag: "Include/exclude data for episodes based on the age of the episode when the data was generated (e.g., Include data only when the download/impression/etc occurred within 48 hours of the episode being released, regardless of how long ago it was released)"
       ua: "Include/exclude data for specific user agents (e.g., Include data only for Apple Podcasts and Spotify)"
