--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -48,6 +48,12 @@ en:
       tz: "Include/exclude data for specific time zones (e.g., Include data only from Eastern time zone in the US)"
       campaign: "Include/exclude data for activity related to a specific campaign (e.g., Include download/impression/etc data only for downloads that included ads for certain campaigns)"
       advertiser: "Include/exclude data for activity related to a specific advertiser (e.g., Include download/impression/etc data only for downloads that included ads from certain advertisers"
+  groups:
+    truncate:
+      display:
+        week: Week (Sunday)
+        month: Month
+        year: Year
   number:
     human:
       storage_units:
