--- a/config/locales/data_explorer/data_results/en.yml
+++ b/config/locales/data_explorer/data_results/en.yml
@@ -16,7 +16,7 @@ en:
         "AF": Africa
         "AS": Asia
         "EU": Europe
-        "NA": N Amererica
+        "NA": N America
         "OC": Oceania
         "SA": S America
     replace_exhibitions:
